FIX: modified overflow property on the body

--- a/css/box-model/box-model.css
+++ b/css/box-model/box-model.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
 
   font-size: calc(1rem + 0.5vw);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* use the section as layout wrapper */
